included adtless in aggregator

--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,11 @@
 		<target.platform>indigo</target.platform>
 	</properties>
 	<modules>
-		<module>me.gladwell.eclipse.m2e.android</module>
+		<module>net.dahanne.eclipse.m2e.android</module>
+		<!--module>me.gladwell.eclipse.m2e.android</module>
 		<module>me.gladwell.eclipse.m2e.android.feature</module>
 		<module>me.gladwell.eclipse.m2e.android.test</module>
-		<module>me.gladwell.eclipse.m2e.android.update</module>
+		<module>me.gladwell.eclipse.m2e.android.update</module-->
 	</modules>
 	<build>
 		<plugins>
