--- a/net.dahanne.eclipse.m2e.android/plugin.xml
+++ b/net.dahanne.eclipse.m2e.android/plugin.xml
@@ -10,6 +10,14 @@
        </configurator>
     </extension>
     <extension
+          point="org.eclipse.m2e.core.projectConfigurators">
+       <configurator
+             class="net.dahanne.eclipse.m2e.android.AndroidProjectConfigurator2"
+             id="net.dahanne.eclipse.m2e.android.androidProjectConfigurator2"
+             name="Android m2eclipse Configurator2">
+       </configurator>
+    </extension>
+    <extension
           point="org.eclipse.m2e.core.lifecycleMappingMetadataSource">
     </extension>
 </plugin>
